fixed alignment bug

--- a/client/src/components/Form/style.scss
+++ b/client/src/components/Form/style.scss
@@ -42,7 +42,7 @@ TextArea {
 p {
   color: #000000;
   font-family: 'Montserrat', sans-serif;
-  font-size: 14px;
+  font-size: 12px;
   text-transform: uppercase;
   text-align: center;
 }
